--- a/notebooks/figure1.Rmd
+++ b/notebooks/figure1.Rmd
@@ -104,40 +104,42 @@ tibble(
 Are there periportal or central marker genes that have significantly higher expression in the original hepatocytes?
 
 ```{r}
+cells$cell.type <- case_when(
+  cells$seurat_clusters == 0 ~ "Portal hepatoctyes (0)",
+  cells$seurat_clusters == 1 ~ "Mid-zonal hepatocytes (1)",  
+  cells$seurat_clusters == 2 ~ "Mid-zonal hepatocytes (2)",
+  cells$seurat_clusters == 3 ~ "Central hepatocytes (3)",
+  cells$seurat_clusters == 4 ~ "Portal hepatocytes (4)",
+  cells$seurat_clusters == 5 ~ "Mid-zonal hepatocytes (5)",
+  cells$seurat_clusters == 6 ~ "Endothelial cells (6)"
+)
+
+cells$cell.type.shorter <- case_when(
+  cells$seurat_clusters == 0 ~ "Portal 0",
+  cells$seurat_clusters == 1 ~ "Mid-zonal 1",  
+  cells$seurat_clusters == 2 ~ "Mid-zonal 2",
+  cells$seurat_clusters == 3 ~ "Central 3",
+  cells$seurat_clusters == 4 ~ "Portal 4",
+  cells$seurat_clusters == 5 ~ "Mid-zonal 5",
+  cells$seurat_clusters == 6 ~ "Endothelial"
+)
+
+cells$cell.type.shortest <- case_when(
+  cells$seurat_clusters == 0 ~ "Portal",
+  cells$seurat_clusters == 1 ~ "Mid-zonal",  
+  cells$seurat_clusters == 2 ~ "Mid-zonal",
+  cells$seurat_clusters == 3 ~ "Central",
+  cells$seurat_clusters == 4 ~ "Portal",
+  cells$seurat_clusters == 5 ~ "Mid-zonal",
+  cells$seurat_clusters == 6 ~ "Endothelial"
+)
+
 cells.section1 <- subset(cells, dataset.type %in% c("hep", 'high'))
 
 # re-name 'hep' to 'pre' and 'high' to 'host'
 cells.section1$dataset.type <- ifelse(cells.section1$dataset.type == "hep", "pre", "post")
 
-cells.section1$cell.type <- case_when(
-  cells.section1$seurat_clusters == 0 ~ "Portal hepatoctyes (0)",
-  cells.section1$seurat_clusters == 1 ~ "Mid-zonal hepatocytes (1)",  
-  cells.section1$seurat_clusters == 2 ~ "Mid-zonal hepatocytes (2)",
-  cells.section1$seurat_clusters == 3 ~ "Central hepatocytes (3)",
-  cells.section1$seurat_clusters == 4 ~ "Portal hepatocytes (4)",
-  cells.section1$seurat_clusters == 5 ~ "Mid-zonal hepatocytes (5)",
-  cells.section1$seurat_clusters == 6 ~ "Endothelial cells (6)"
-)
 
-cells.section1$cell.type.shorter <- case_when(
-  cells.section1$seurat_clusters == 0 ~ "Portal 0",
-  cells.section1$seurat_clusters == 1 ~ "Mid-zonal 1",  
-  cells.section1$seurat_clusters == 2 ~ "Mid-zonal 2",
-  cells.section1$seurat_clusters == 3 ~ "Central 3",
-  cells.section1$seurat_clusters == 4 ~ "Portal 4",
-  cells.section1$seurat_clusters == 5 ~ "Mid-zonal 5",
-  cells.section1$seurat_clusters == 6 ~ "Endothelial"
-)
-
-cells.section1$cell.type.shortest <- case_when(
-  cells.section1$seurat_clusters == 0 ~ "Portal",
-  cells.section1$seurat_clusters == 1 ~ "Mid-zonal",  
-  cells.section1$seurat_clusters == 2 ~ "Mid-zonal",
-  cells.section1$seurat_clusters == 3 ~ "Central",
-  cells.section1$seurat_clusters == 4 ~ "Portal",
-  cells.section1$seurat_clusters == 5 ~ "Mid-zonal",
-  cells.section1$seurat_clusters == 6 ~ "Endothelial"
-)
 
 ```
 
@@ -523,28 +525,6 @@ Marti calls these clusters:
 Let's label them:
 
 ```{r integratedClustersLabelled, fig.height=5, fig.width=10}
-cells$cell.type <- case_when(
-  cells$seurat_clusters == 0 ~ "Portal hepatocytes (0)",
-  cells$seurat_clusters == 1 ~ "Mid-zonal hepatocytes (1)",  
-  cells$seurat_clusters == 2 ~ "Mid-zonal hepatocytes (2)",
-  cells$seurat_clusters == 3 ~ "Central hepatocytes (3)",
-  cells$seurat_clusters == 4 ~ "Portal hepatocytes (4)",
-  cells$seurat_clusters == 5 ~ "Mid-zonal hepatocytes (5)",
-  cells$seurat_clusters == 6 ~ "Endothelial cells (6)"
-)
-
-cells$cell.type.shorter <- case_when(
-  cells$seurat_clusters == 0 ~ "Portal hepatocytes",
-  cells$seurat_clusters == 1 ~ "Mid-zonal hepatocytes",  
-  cells$seurat_clusters == 2 ~ "Mid-zonal hepatocytes",
-  cells$seurat_clusters == 3 ~ "Central hepatocytes",
-  cells$seurat_clusters == 4 ~ "Portal hepatocytes",
-  cells$seurat_clusters == 5 ~ "Mid-zonal hepatocytes",
-  cells$seurat_clusters == 6 ~ "Endothelial cells"
-)
-
-
-
 DimPlot(cells, group.by="cell.type", split.by = "dataset.type")
 ```
 
@@ -651,7 +631,7 @@ Our two options are then:
 
 
 
-```{r abc fig.width = 8, fig.height=8}
+```{r abc, fig.width = 8, fig.height=8}
 c1 <- c1 + NoLegend()
 c2 <- c2 + NoLegend()
 c3 <- c3 + NoLegend()
@@ -683,13 +663,16 @@ abc <- patchwork::wrap_plots(a, b, c) + plot_layout(design=layout)
 abc
 ```
 
-```{r abc_alt fig.width = 8, fig.height=8}
+```{r abc_alt, fig.width = 8, fig.height=8}
 abcalt <- patchwork::wrap_plots(a, b, calt) + plot_layout(design=layout)
 
 abcalt
 ```
 
-Not too bad.  The legend for B is a bit cut off, but maybe we can fix that at the end.  Let's add the rest of the plots.  The rest of the figure gene expression in both pre-engraftment cells and hFRG hepatocytes for the genes:  ASS1, CYP2E1, LGR5, AXIN2, KIAA0319L, GPR108.
+Not too bad.  The legend for B is a bit cut off, but maybe we can fix that at the end.  
+
+### Final figure?
+Let's add the rest of the plots.  The rest of the figure gene expression in both pre-engraftment cells and hFRG hepatocytes for the genes:  ASS1, CYP2E1, LGR5, AXIN2, KIAA0319L, GPR108.
 
 
 ```{r fig1_final, fig.height = 18, fig.width = 9}
